WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17681
GtkLauncher fails to render an element with position: fixed
https://bugs.webkit.org/show_bug.cgi?id=17681
Summary
GtkLauncher fails to render an element with position: fixed
Chris Lee
Reported
2008-03-05 10:47:07 PST
At my blog (
http://c133.org/blog/
) I have a div#footer element with position: fixed specified in the CSS. The correct rendering (as rendered by a WebKit nightly on the Mac, revision 30793) can be seen at
http://c133.org/tmp/c133-macwebkit.png
- while the rendering from the GTK build of WebKit can be seen at
http://c133.org/tmp/c133-gtkwebkit.png
and seems to be otherwise very good.
Attachments
GtkWebKit rendering showing lack of footer
(129.60 KB, image/png)
2008-03-05 10:48 PST
,
Chris Lee
no flags
Details
Mac WebKit rendering including footer
(227.74 KB, image/png)
2008-03-05 10:50 PST
,
Chris Lee
no flags
Details
Fix
(2.12 KB, patch)
2008-03-05 13:16 PST
,
Pierre-Luc Beaudoin
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Lee
Comment 1
2008-03-05 10:48:49 PST
Created
attachment 19549
[details]
GtkWebKit rendering showing lack of footer This is a screenshot of the GtkLauncher app rendering the page; notice how the footer is not rendered.
Chris Lee
Comment 2
2008-03-05 10:50:14 PST
Created
attachment 19550
[details]
Mac WebKit rendering including footer This is how the latest Safari nightly renders the page, properly including the footer.
Pierre-Luc Beaudoin
Comment 3
2008-03-05 13:16:35 PST
Created
attachment 19554
[details]
Fix screenRect was returning a 0x0 sized rect seems to prevent such pages to render correctly.
Alp Toker
Comment 4
2008-03-07 22:03:43 PST
Comment on
attachment 19554
[details]
Fix r=me
Alp Toker
Comment 5
2008-03-07 22:09:12 PST
Landed in
r30892
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug