2008-03-07  Pierre-Luc Beaudoin  <pierre-luc.beaudoin@collabora.co.uk>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17681
        GtkLauncher fails to render an element with position: fixed

        Implement the required parts of PlatformScreenGtk.

        * ChangeLog:
        * platform/gtk/PlatformScreenGtk.cpp:
        (WebCore::screenDepth):
        (WebCore::screenIsMonochrome):
        (WebCore::screenRect):


Canonical link: https://commits.webkit.org/24576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30892 268f45cc-cd09-0410-ab3c-d52691b4dbfc